--- a/src/features/navbar/NavBar.module.scss
+++ b/src/features/navbar/NavBar.module.scss
@@ -19,6 +19,7 @@
 
   @include max-bp('small') {
     margin-top: 10%;
+    margin-bottom: 50px;
     flex-direction: column;
     align-items: flex-end;
     
