--- a/src/features/navbar/NavBar.module.scss
+++ b/src/features/navbar/NavBar.module.scss
@@ -8,7 +8,6 @@
   justify-content: space-around;
   flex-wrap: wrap;
   margin-left: 430px;
-  // margin: 0 20px;
   color: ghostwhite;
   z-index: 120;
   border-radius: 2px;
@@ -21,7 +20,7 @@
     margin-top: 10%;
     margin-bottom: 50px;
     flex-direction: column;
-    align-items: flex-end;
+    // align-items: flex-end;
     
   }
   @include max-bp('mini') {
@@ -71,17 +70,3 @@
 
 }
 
-// .scrollToUp {
-//   position: fixed;
-//   bottom: 57px;
-//   right: 15px;
-//   width: 33px;
-//   height: 33px;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   border: 1px solid gray;
-//   border-radius: 50%;
-//   font-size: 2em;
-//   z-index: 50;
-// }
