--- a/src/common/component/Title/Title.module.scss
+++ b/src/common/component/Title/Title.module.scss
@@ -14,6 +14,7 @@
       writing-mode: tb-rl;
       transform: rotate(180deg);
     }
+
   };
   @include max-bp('mini') {
     font-size: 1.8em;
@@ -26,40 +27,41 @@
   &.titleMain {
     animation: titleEffect 1s ease 0.5s;
   }
+
 }
 
 @keyframes titleEffect {
   0% {
-    transform: scale3d(100%, 100%, 100%) rotate(180deg);
+    @include transformTitle();
   }
   10% {
-    transform: scale3d(130%, 170%, 100%) rotate(180deg);
+    @include transformTitle(1.3, 1.7);
   }
   20% {
-    transform: scale3d(100%, 100%, 100%) rotate(180deg);
+    @include transformTitle();
   }
   30% {
-    transform: scale3d(110%, 140%, 100%) rotate(180deg);
+    @include transformTitle(1.1, 1.4);
   }
   40% {
-    transform: scale3d(100%, 100%, 100%) rotate(180deg);
+    @include transformTitle();
   }
   50% {
-    transform: scale3d(40%, 70%, 100%) rotate(180deg);
+    @include transformTitle(0.4, 0.7);
   }
   60% {
-    transform: scale3d(100%, 100%, 100%) rotate(180deg);
+    @include transformTitle();
   }
   70% {
-    transform: scale3d(110%, 160%, 100%) rotate(180deg);
+    @include transformTitle(1.1, 1.6);
   }
   80% {
-    transform: scale3d(100%, 100%, 100%) rotate(180deg);
+    @include transformTitle();
   }
   90% {
-    transform: scale3d(110%, 130%, 100%) rotate(180deg);
+    @include transformTitle(1.1, 1.3);
   }
   100% {
-    transform: scale3d(100%, 100%, 100%) rotate(180deg);
+    @include transformTitle();
   }
 }
