--- a/src/common/styles/sass/mixins.scss
+++ b/src/common/styles/sass/mixins.scss
@@ -125,4 +125,12 @@
   box-shadow:0 0 13px*$n 7px*$n rgba($color: color.invert($generalBackgroundColor, 100%), $alpha: 0.9);
 }
 
+@mixin transformTitle($x: 1,$y: 1, $degAngy: 180deg) {
+  transform: scale($x, $y) rotate($degAngy);
+}
 
+// animation for main background
+
+@mixin mainBackgroundAnime($x, $y) {
+  transform: translate($x, $y)
+}
