--- a/src/features/main/Main.module.scss
+++ b/src/features/main/Main.module.scss
@@ -12,12 +12,12 @@
     @include max-bp('mini') {
       padding-top: 155px;
       margin-right: 10px;
-      justify-content: flex-end;
+    
     }
 
     .info {
+      margin-left: 15px;
       
-      border-radius: 3px;
     
       @include max-bp('small') {
         margin-right: 10px;
@@ -27,14 +27,73 @@
 
     .photo {
       width: 230px;
-      height: 350px; 
+      height: 330px; 
       border-radius: 0 30px 30px 0;
-      transition: width 2s;
-      opacity: 0.97;
+      opacity: 0.9;
       z-index: 30;
 
-      @include shadowBox(2.5)
+      &:hover {
+        transform: rotateY(180deg);
+        border-radius: 30px 0 0 30px;
+      }
+      @include shadowBox(1.3);
+      @include max-bp('mini') {
+        width: 175px;
+        height: 240px;
+        
+      }
     }
+  }
+  overflow: hidden;
+  &::before {
+    content: '';
+    position: absolute;
+    top: -400px;
+    bottom: -400px;
+    right: -400px;
+    left: -400px;
+    background-image: url('../../assets/image/mainBackground.jpg');
+    background-size: cover;
+    opacity: 0.1;
+    
+    animation: backgroundEffect 60s ease-in-out 0s infinite;
+    }
+  
+}
+
+@keyframes backgroundEffect {
+  0% {
+    @include mainBackgroundAnime(0px, 0px);
+  }
+  10% {
+    @include mainBackgroundAnime(130px, 170px);
+  }
+  20% {
+    @include mainBackgroundAnime(180px, 100px);
+  }
+  30% {
+    @include mainBackgroundAnime(-250px, 340px);
+  }
+  40% {
+    @include mainBackgroundAnime(-130px, -170px);
+  }
+  50% {
+    @include mainBackgroundAnime(330px, -370px);
+  }
+  60% {
+    @include mainBackgroundAnime(230px, 370px);
+  }
+  70% {
+    @include mainBackgroundAnime(160px, 70px);
+  }
+  80% {
+    @include mainBackgroundAnime(-330px, 470px);
+  }
+  90% {
+    @include mainBackgroundAnime(130px, 170px);
+  }
+  100% {
+    @include mainBackgroundAnime(-30px, 10px);
   }
 }
 
